# RFTA

./: .gitignore  README.md
RFTA/: CMakeLists.txt  UI-Dashboard.cpp  dashboard.ui  main.cpp  mainwindow.cpp
RFTA-Win64/: CMakeLists.txt  LoginForm.ui  UI-Dashboard.cpp  UI-DashboardStyle.h  dashboard.cpp  dashboard.h  dashboard.ui  loadingscreen.cpp  loadingscreen.ui  login.cpp  login.h  login.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc  setup.iss
RFTA/forms/: dashboard.ui  loadingscreen.ui  login.ui  mods.ui
RFTA/header/: mainwindow.h
RFTA/header/dashboard/: UI-DashboardStyle.h  dashboard.h  dashboardStyle.h  mods.h  mods.ui
RFTA/header/login/: login.h
RFTA/header/misc/: infobar.h
RFTA/header/net/: loginHandler.h  serverHandler.h
RFTA/src/: NET-SetupHelper.cpp  UI-Dashboard.cpp  UI-SetupHelper.cpp  dashboard.cpp  login.cpp  mainwindow.cpp
RFTA/src/dashboard/: NET-Dashboard.cpp  UI-Dashboard.cpp  dashboard.cpp  mods.cpp
RFTA/src/loadScreen/: loadingscreen.cpp
RFTA/src/login/: login.cpp
RFTA/src/misc/: clickQLabel.cpp  hasher.cpp  infobar.cpp
RFTA/src/net/: loginHandler.cpp  serverHandler.cpp
modules/change-widgets-test/: CMakeLists.txt  dashboardwidget.cpp  dashboardwidget.h  dashboardwidget.ui  loginwidget.cpp  loginwidget.h  loginwidget.ui  main.cpp  mainwindow.cpp  mainwindow.h
modules/file-uploader/: mainwindow.h
modules/overlay-loadingscreen-test/: CMakeLists.txt  loading.ui  login.cpp  login.h  main.cpp  mainwindow.cpp  mainwindow.h
modules/qrc-font-test/: main.cpp
modules/scrollarea-test/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.ui
nas-server/: .env.example  main.py  requirements.txt
nas-server/app/: __init__.py  config.py  db.py  models.py
nas-server/app/routes/: __init__.py  admin.py  controller.py  server.py  servers.py  users.py
nas-server/app/utils/: admindec.py  auth.py  jwtdec.py  rconexec.py
nas-server/main-application/: server.py
